[tool.poetry]
name = "img-scraper"
version = "0.1.0"
description = ""
authors = ["NeedsSoySauce <feras.albaroudi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
lxml = "^4.6.3"
tqdm = "^4.60.0"
requests-html = "^0.10.0"
requests = "^2.25.1"
nest-asyncio = "^1.5.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
